# blitzwing

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
blitzwing-benchmark/: build.gradle.kts
blitzwing-common/: build.gradle.kts
blitzwing-executor/: build.gradle.kts
blitzwing-native/: Cargo.toml  build.gradle.kts  rustfmt.toml
blitzwing-native/blitzwing/: Cargo.toml  build.rs
blitzwing-native/blitzwing-engine/: Cargo.toml
blitzwing-native/blitzwing-engine/src/: agg_tmp.rs  error.rs  executor_jni.rs  lib.rs
blitzwing-native/blitzwing-engine/src/aggregation/: mod.rs  sum.rs
blitzwing-native/blitzwing-engine/src/datasource/parquet/: array_reader.rs  array_reader_builder.rs  mod.rs  parquet_record_reader.rs
blitzwing-native/blitzwing-engine/src/executor/: aggregation_executor.rs  chunk_manager.rs  mod.rs  parquet_scan_executor.rs  types.rs
blitzwing-native/blitzwing-engine/src/num/: mod.rs
blitzwing-native/blitzwing-engine/src/proto/: expr.rs  mod.rs  plan.rs  record_batch.rs  types.rs
blitzwing-native/blitzwing/benches/: buffer.rs
blitzwing-native/blitzwing/log4rs/: hdfs.yaml
blitzwing-native/blitzwing/src/: error.rs  lib.rs
blitzwing-native/blitzwing/src/parquet/: array_reader.rs  concat_reader.rs  error.rs  lib.rs  mod.rs  parquet_reader.rs  record_reader.rs
blitzwing-native/blitzwing/src/parquet_adapter/: array_reader.rs  array_reader_builder.rs  mod.rs  parquet_reader.rs  parquet_reader_jni.rs  record_reader.rs
blitzwing-native/blitzwing/src/proto/: expr.rs  mod.rs  parquet.rs  plan.rs  record_batch.rs  types.rs
blitzwing-native/blitzwing/src/types/: mod.rs
blitzwing-native/blitzwing/src/util/: buffer.rs  concat_reader.rs  jni_util.rs  mod.rs  num.rs  reader.rs  shared_queue.rs  try_iterator.rs
blitzwing-native/blitzwing/src/util/buffer/: buffer.rs  builder.rs  manage.rs  manager.rs  mod.rs  ops.rs
blitzwing-native/gsasl-rs/: Cargo.toml  build.rs  wrapper.h
blitzwing-native/gsasl-rs/src/: bindings.rs  client.rs  error.rs  lib.rs  utils.rs
blitzwing-native/hdfs-rs/: Cargo.toml  build.rs
blitzwing-native/hdfs-rs/src/: config.rs  error.rs  lib.rs  rt.rs
blitzwing-native/hdfs-rs/src/fs/: file_status.rs  file_system.rs  input_stream.rs  mod.rs  path.rs
blitzwing-native/hdfs-rs/src/hadoop_proto/: ClientDatanodeProtocol.rs  ClientNamenodeProtocol.rs  DatanodeLifelineProtocol.rs  DatanodeProtocol.rs  GenericRefreshProtocol.rs  GetUserMappingsProtocol.rs  HAServiceProtocol.rs  HAZKInfo.rs  InterDatanodeProtocol.rs  IpcConnectionContext.rs  JournalProtocol.rs  NamenodeProtocol.rs  ProtobufRpcEngine.rs  ProtocolInfo.rs  QJournalProtocol.rs  ReconfigurationProtocol.rs  RefreshAuthorizationPolicyProtocol.rs  RefreshCallQueueProtocol.rs  RefreshUserMappingsProtocol.rs  RpcHeader.rs  Security.rs  TraceAdmin.rs  ZKFCProtocol.rs  acl.rs  datatransfer.rs  encryption.rs  fsimage.rs  hdfs.rs  inotify.rs  mod.rs  xattr.rs
blitzwing-native/hdfs-rs/src/hdfs/: block.rs  datanode.rs  dfs_input_stream.rs  distributed_file_system.rs  hdfs_config.rs  mod.rs
blitzwing-native/hdfs-rs/src/hdfs/protocol/: client_protocol.rs  mod.rs
blitzwing-native/hdfs-rs/src/hdfs/transfer/: block.rs  block_io.rs  block_reader.rs  connection.rs  data_transfer_protocol.rs  dfs_input_stream.rs  mod.rs  packet.rs
blitzwing-native/hdfs-rs/src/hdfs/transfer/test_utils/: connection_utils.rs  mod.rs
blitzwing-native/hdfs-rs/src/rpc/: auth.rs  basic_rpc_client.rs  constants.rs  message.rs  mod.rs  rpc_client.rs  sasl.rs  user.rs
blitzwing-native/hdfs-rs/src/utils/: proto.rs
blitzwing-native/hdfs-tools/: Cargo.toml
blitzwing-native/hdfs-tools/log4rs/: hdfs.yaml
blitzwing-native/hdfs-tools/src/: main.rs
blitzwing-parquet/: build.gradle.kts
(+57 files in other folders)
