[package]
name = "blitzwing"
version = "0.1.0"
authors = ["Renjie Liu <renliu@ebay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = {version = "0.14.0", features = ["invocation"] }
#arrow = "0.15.1"
#parquet = "0.15.1"
parquet = { path = "../../../arrow/rust/parquet" }
arrow = { path = "../../../arrow/rust/arrow" }
protobuf = "2.8.0"
failure = "0.1.6"
failure_derive = "0.1.6"
derive-new = "0.5"
num = "0.2"

[build-dependencies]
protoc-rust = "2.0"