[package]
name = "blitzwing"
version = "0.1.0"
authors = ["Renjie Liu <renliu@ebay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = {version = "0.14.0", features = ["invocation"] }
#arrow = "0.15.1"
#parquet = "0.15.1"
parquet = { path = "../../../arrow/rust/parquet" }
arrow = { path = "../../../arrow/rust/arrow" }
protobuf = "2.8.0"
failure = "0.1.6"
failure_derive = "0.1.6"
derive-new = "0.5"
num = "0.2"
log = { version = "0.4", features = ["std"] }
log4rs = "0.9"

[dev-dependencies]
flatbuffers = "0.6"
serde_json = { version = "1.0", features = ["preserve_order"] }

[build-dependencies]
protoc-rust = "2.0"


[lib]
name = "blitzwing_rs"
path = "src/lib.rs"
crate-type=["cdylib"]

#[lib]
#name = "arrow_executor_rs2"
#path = "src/lib.rs"
#
#[[bin]]
#name = "executor"
#path = "src/bin/executor.rs"


