[package]
name = "hdfs-rs"
version = "0.0.1"
authors = ["renliu"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.6", features = ["full"] }
failure = "0.1.6"
failure_derive = "0.1.6"
async-trait = "0.1.21"
bytes = "0.5.3"
protobuf = "2.8.1"
log = { version = "0.4", features = ["std"] }
url = "2.1.0"
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["v4"]}
derive-new = "0.5"
getset = "0.0.9"

[dev-dependencies]
rand = "0.7"



[build-dependencies]
protoc-rust = "2.8.1"
