[package]
name = "hdfs-tools"
version = "0.1.0"
authors = ["renliu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdfs-rs = {version = "0.0.1", path = "../hdfs-rs"}
log4rs = "0.9"
log = { version = "0.4", features = ["std"] }
failure = "0.1.6"
